--- a/src/app/shared/posts-card/posts-card.component.css
+++ b/src/app/shared/posts-card/posts-card.component.css
@@ -1,11 +1,8 @@
 .title {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
   cursor: pointer;
-}
-
-.body {
-  font-size: 18px;
+  display: inline-block;
 }
 
 .body::first-letter {
