feat: Set update and create states of form

--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -18,6 +18,7 @@
       />
       <div class="invalid-feedback">Title is required</div>
     </div>
+
     <div class="mb-3">
       <label for="validationTextarea" class="form-label">Body</label>
       <textarea
@@ -37,10 +38,36 @@
         Please enter a content in the textarea.
       </div>
     </div>
-    <div class="col-12">
-      <button class="btn btn-primary" type="button" (click)="handleSubmit()">
-        Submit form
+    <div
+      class="btn-toolbar col-12 d-flex justify-content-between"
+      *ngIf="isUpdate; else create"
+    >
+      <button
+        class="btn btn-primary btn-block"
+        style="width: 49%"
+        type="button"
+        (click)="handleSubmit()"
+      >
+        Update
+      </button>
+
+      <button
+        class="btn btn-danger btn-block"
+        style="width: 49%"
+        type="button"
+        (click)="handleSubmit()"
+      >
+        Remove
       </button>
     </div>
+    <ng-template #create>
+      <button
+        class="btn col-12 btn-primary btn-block"
+        type="button"
+        (click)="handleSubmit()"
+      >
+        Create
+      </button>
+    </ng-template>
   </form>
 </main>
