--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -46,7 +46,7 @@
         class="btn btn-primary btn-block"
         style="width: 49%"
         type="button"
-        (click)="handleSubmit()"
+        (click)="onUpdate()"
       >
         Update
       </button>
@@ -55,7 +55,7 @@
         class="btn btn-danger btn-block"
         style="width: 49%"
         type="button"
-        (click)="handleSubmit()"
+        (click)="onRemove()"
       >
         Remove
       </button>
@@ -64,7 +64,7 @@
       <button
         class="btn col-12 btn-primary btn-block"
         type="button"
-        (click)="handleSubmit()"
+        (click)="onCreate()"
       >
         Create
       </button>
